--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
-}
+:root {
+    --primaryColor: #583101;
+    --white: #ffffff;
+    --secondary:#A47148;
+    --borders:#E7bc91;
+    --textColor:#fff;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    --primary-color:#fff;
+    --secondary-color:#fff;
+    --accent-color:#fff;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    --text-color-one:#fff;
+    --text-color-two:#fff;
+
+    --button-color-primary:#fff;
+    --button-color-secondary:#fff;
+    --button-color-tertiary:#fff;
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
