--- a/src/UI/button/button.module.css
+++ b/src/UI/button/button.module.css
@@ -4,12 +4,16 @@
     cursor: pointer;
     /* color: var(--textColor); */
     border: none;
+    user-select: none; 
     color:var(--textColor);
     background-color: var(--secondary);
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
+    border-radius: 5px;
 }
 .button:hover,
 .button:active{
     background: var(--primaryColor);
-    border-color: var(--primaryColor);
+   /* border: 0.5px solid var(--secondary); */
+   outline: 1px solid var(--secondary);
 }
+
