--- a/src/components/featured/featured.css
+++ b/src/components/featured/featured.css
@@ -9,7 +9,7 @@
 
 .featuredItem{
   position: relative;
-  color: white;
+  color: var(--text-color-one);
   border-radius: 10px;
   overflow: hidden;
   height: 250px;
