--- a/src/components/featuredProperties/featuredProperties.css
+++ b/src/components/featuredProperties/featuredProperties.css
@@ -33,7 +33,7 @@
 }
 
 .fpRating>button{
-  background-color: #003580;
+  background-color: var(--text-color-five);
   color: white;
   border: none;
   padding: 3px;
