--- a/src/components/searchItem/searchItem.css
+++ b/src/components/searchItem/searchItem.css
@@ -1,11 +1,11 @@
 .searchItem {
-  border: 1px solid lightgray;
-  padding: 10px;
-  border-radius: 5px;
+  /* border: 1px solid lightgray; */
+  /* padding: 10px; */
+  /* border-radius: 5px; */
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .siImg {
@@ -23,7 +23,7 @@
 
 .siTitle {
   font-size: 20px;
-  color: #0071c2;
+  color: var(--text-color-three);
 }
 
 .siDistance {
@@ -32,7 +32,7 @@
 
 .siTaxiOp {
   font-size: 12px;
-  background-color: #008009;
+  background-color: var(--text-color-five);
   color: white;
   width: max-content;
   padding: 3px;
@@ -50,13 +50,13 @@
 
 .siCancelOp{
   font-size: 12px;
-  color: #008009;
+  color: var(--text-color-five);
   font-weight: bold;
 }
 
 .siCancelOpSubtitle{
   font-size: 12px;
-  color: #008009;
+  color: var(--text-color-five);
 }
 
 .siDetails {
@@ -75,7 +75,7 @@
   font-weight: 500;
 }
 .siRating>button{
- background-color: #003580;
+ background-color:var(--text-color-five);
  color: white;
  padding: 5px;
  font-weight: bold;
@@ -95,15 +95,13 @@
 
 .siTaxOp{
   font-size: 12px;
-  color: gray;
+  color: var( --text-color-four);
+}
+.siDetailTexts > button{
+ font-weight: bold;
+ padding: 10px 5px;
+ /* border: none; */
+ /* cursor: pointer; */
+ /* border-radius: 5px; */
 }
 
-.siCheckButton{
-  background-color: #0071c2;
-  color: white;
-  font-weight: bold;
-  padding: 10px 5px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
