--- a/src/components/mailList/mailList.css
+++ b/src/components/mailList/mailList.css
@@ -28,6 +28,7 @@
   /* background-color: var(--secondary); */
   /* color: var(--textColor); */
   font-weight: 500;
+  padding: 14px 30px;
   /* border: none; */
   /* border-radius: 5px; */
   /* cursor: pointer; */
