--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -18,7 +18,7 @@
 
 .fListItem{
   margin-bottom: 10px;
-  color: var(--text-color-two);
+  color: var(--text-color-three);
   cursor: pointer;
 }
 .fText{
